--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@ p {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    background: url(cat.jpg) no-repeat center;
+    background: url(toy.jpg) no-repeat center;
     background-attachment: fixed;
     -webkit-background-clip: text;
     -webkit-text-fill-color: rgba(255, 255, 255, 0);
